# umep-solweig

./: .gitignore  README.md  pyproject.toml  test.py
src/umep_solweig/: __init__.py  dailyshading.py  solweig_run.py  solweig_run_gpu.py  svf_for_voxels.py  svf_functions.py  svf_functions_torch.py  wallalgorithms_torch.py
src/umep_solweig/SOLWEIGpython/: Kside_veg_v2022a.py  Lcyl_v2022a.py  PET_calculations.py  Solweig_2025a_calc_forprocessing.py  Solweig_2026a_calc_forprocessing.py  Solweig_2026a_calc_forprocessing_torch.py  Solweig_run.py  Solweig_run_original.py  Solweig_run_torch.py  emissivity_models.py  ground_surface_torch.py  patch_characteristics.py  patch_radiation.py  wallOfInterest.py  wall_surface_temperature.py
src/umep_solweig/SOLWEIGpython/COMFA/: CNRRabs_Total.py  CNR_Kinabs_meas_old.py  CNR_Kup.py  COMFA_BUDGET.py  CRT_Acs.py  CRT_Acyl.py  LinMeas_abs.py  LupMeas_abs.py  Ratio_Kb.py  atm_P.py  radiationfunctionsCOMFA.py  solar_ET.py  solar_dec.py  solar_zenith.py
src/umep_solweig/util/: __init__.py  landCoverFractions_v2.py  misc.py  shadowingfunctions.py  ssParms.py
src/umep_solweig/util/SEBESOLWEIGCommonFiles/: Perez_v3.py  Perez_v3_torch.py  Solweig_v2015_metdata_noload.py  Solweig_v2015_metdata_noload_torch.py  clearnessindex_2013b.py  clearnessindex_2013b_torch.py  create_patches.py  create_patches_torch.py  shadowingfunction_wallheight_13.py  shadowingfunction_wallheight_13_torch.py  shadowingfunction_wallheight_23.py  shadowingfunction_wallheight_23_torch.py  sun_position_torch.py
