[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "umep-solweig"
version = "2026.1.0"
description = "SOLWEIG algorithm implementation for urban thermal and radiation simulation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "UMEP Development Team", email = "umep@geo.su.se"}
]
keywords = [
    "urban climate",
    "thermal comfort",
    "solar radiation",
    "SOLWEIG",
    "urban geometry",
    "meteorology"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "netCDF4>=1.5.0",
]

[project.optional-dependencies]
torch = [
    "torch>=1.10.0",
]
gpu = [
    "torch>=1.10.0",
    "cuda-toolkit>=11.2",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "isort>=5.12",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.1",
]

[project.urls]
Documentation = "https://umep-docs.readthedocs.io/"
Repository = "https://github.com/UMEP-dev/umep-solweig"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
umep_solweig = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=umep-solweig --cov-report=html --cov-report=term-missing"
